--- a/admin-panel/public/index.html
+++ b/admin-panel/public/index.html
@@ -18,7 +18,8 @@
     />
   </head>
   <body>
-    <noscript>You need to enable JavaScript to run this apps.</noscript>
+    
+    <noscript>You need to enable JavaScript to run this apps admin panel.</noscript>
     <div id="root"></div>
   </body>
 </html>
